--- a/meow.html
+++ b/meow.html
@@ -14,7 +14,7 @@
     </style>
  </head>
   <body>
-    <h1>Give Me Head</h1>
+    <h1>Redacted</h1>
         <p>why did i sign up to do this i hate my life. but i still love u, mary</p>
     <h2>heading</h2>
     <p>im sick of <b>THIS</b></p>
