--- a/meow.html
+++ b/meow.html
@@ -13,6 +13,7 @@
       }
     </style>
  </head>
+  <a href="index.html">home(NOT HOE U HOE U HOE)</a>
   <body>
     <h1>Redacted</h1>
         <p>why did i sign up to do this i hate my life. but i still love u, mary</p>
